source/blender/blenkernel/intern/cdderivedmesh.c
@@ -265,7 +265,7 @@ static DerivedMesh *cdDM_from_mesh_ex(Mesh *mesh,
   dm->deformedOnly = 1;
   dm->cd_flag = mesh->cd_flag;
 
-  if (mesh->runtime.cd_dirty_vert & CD_MASK_NORMAL) {
+  if (BKE_mesh_vertex_normals_are_dirty(mesh)) {
     dm->dirty |= DM_DIRTY_NORMALS;
   }
   /* TODO: DM_DIRTY_TESS_CDLAYERS ? Maybe not though,
